replace some words

--- a/es-es/privacy-policy/index.html
+++ b/es-es/privacy-policy/index.html
@@ -238,7 +238,7 @@
               <p><strong>Servicio</strong> hace referencia al Sitio Web.</p>
             </li>
             <li>
-              <p><strong>Proveedor de servicios</strong> significa cualquier persona física o jurídica que procesa los datos en nombre de la Compañía. Se refiere a empresas de terceros o personas empleadas por la Empresa para facilitar el Servicio, proporcionar el Servicio en nombre de la Empresa, realizar servicios relacionados con el Servicio o ayudar a la Empresa a analizar cómo se utiliza el Servicio.</ p>
+              <p><strong>Proveedor de servicios</strong> significa cualquier persona física o jurídica que procesa los datos en nombre de la Team. Se refiere a teams/ studioses de terceros o personas empleadas por la Empresa para facilitar el Servicio, proporcionar el Servicio en nombre de la Empresa, realizar servicios relacionados con el Servicio o ayudar a la Empresa a analizar cómo se utiliza el Servicio.</ p>
             </li>
             <li>
               <p><strong>Datos de uso</strong> se refiere a los datos recopilados automáticamente, ya sea generados por el uso del Servicio o por la propia infraestructura del Servicio (por ejemplo, la duración de una visita a la página).</p>
@@ -247,7 +247,7 @@
               <p><strong>Sitio web</strong> se refiere al equipo de RareFrostbites, accesible desde <a href="../../" rel="external nofollow noopener">https://rarefrostbites.pages.dev</a ></p>
             </li>
             <li>
-              <p><strong>Usted</strong> se refiere a la persona que accede o utiliza el Servicio, o la empresa u otra entidad legal en nombre de la cual dicha persona accede o utiliza el Servicio, según corresponda.</p>
+              <p><strong>Usted</strong> se refiere a la persona que accede o utiliza el Servicio, o la team/ studios u otra entidad legal en nombre de la cual dicha persona accede o utiliza el Servicio, según corresponda.</p>
             </li>
           </ul>
         </div>
@@ -308,7 +308,7 @@
             </li>
             <li>
               <p>
-                <strong>Balizas web.</strong> Ciertas secciones de nuestro Servicio y nuestros correos electrónicos pueden contener pequeños archivos electrónicos conocidos como balizas web (también denominados gifs transparentes, etiquetas de píxeles y gifs de un solo píxel) que permiten a la Compañía, por por ejemplo, para contar los usuarios que visitaron esas páginas o abrieron un correo electrónico y para otras estadísticas relacionadas con el sitio web (por ejemplo, registrar la popularidad de una determinada sección y verificar la integridad del sistema y del servidor).
+                <strong>Balizas web.</strong> Ciertas secciones de nuestro Servicio y nuestros correos electrónicos pueden contener pequeños archivos electrónicos conocidos como balizas web (también denominados gifs transparentes, etiquetas de píxeles y gifs de un solo píxel) que permiten a la Team, por por ejemplo, para contar los usuarios que visitaron esas páginas o abrieron un correo electrónico y para otras estadísticas relacionadas con el sitio web (por ejemplo, registrar la popularidad de una determinada sección y verificar la integridad del sistema y del servidor).
               </p>
             </li>
           </ul>
@@ -385,8 +385,8 @@
         <div class="lists">
           <ul>
             <li><strong>Con Proveedores de Servicios:</strong> Podemos compartir Su información personal con Proveedores de Servicios para monitorear y analizar el uso de nuestro Servicio, para contactarlo.</li>
-            <li><strong>Para transferencias comerciales:</strong> podemos compartir o transferir Su información personal en relación con, o durante las negociaciones de, cualquier fusión, venta de activos de la Compañía, financiación o adquisición de la totalidad o una parte de Nuestro negocio a otra empresa.</li>
-            <li><strong>Con afiliados:</strong> podemos compartir su información con nuestros afiliados, en cuyo caso les exigiremos que respeten esta Política de Privacidad. Los afiliados incluyen nuestra empresa matriz y cualquier otra subsidiaria, socios de empresas conjuntas u otras empresas que controlamos o que están bajo control común con nosotros.</li>
+            <li><strong>Para transferencias comerciales:</strong> podemos compartir o transferir Su información personal en relación con, o durante las negociaciones de, cualquier fusión, venta de activos de la Team, financiación o adquisición de la totalidad o una parte de Nuestro negocio a otra team/ studios.</li>
+            <li><strong>Con afiliados:</strong> podemos compartir su información con nuestros afiliados, en cuyo caso les exigiremos que respeten esta Política de Privacidad. Los afiliados incluyen nuestra team/ studios matriz y cualquier otra subsidiaria, socios de teams/ studioses conjuntas u otras empresas que controlamos o que están bajo control común con nosotros.</li>
             <li><strong>Con socios comerciales:</strong> podemos compartir Su información con Nuestros socios comerciales para ofrecerle ciertos productos, servicios o promociones.</li>
             <li><strong>Con otros usuarios:</strong> cuando comparte información personal o interactúa en las áreas públicas con otros usuarios, dicha información puede ser vista por todos los usuarios y puede distribuirse públicamente al exterior.</li>
             <li><strong>Con su consentimiento</strong>: podemos divulgar su información personal para cualquier otro propósito con su consentimiento.</li></ul>
@@ -396,7 +396,7 @@
             <h2>Retención de sus datos personales</h2>
           </div>
           <div class="paragraph">
-            <p>La Compañía conservará sus Datos personales solo durante el tiempo que sea necesario para los fines establecidos en esta Política de Privacidad. Conservaremos y utilizaremos sus datos personales en la medida necesaria para cumplir con nuestras obligaciones legales (por ejemplo, si estamos obligados a conservar sus datos para cumplir con las leyes aplicables), resolver disputas y hacer cumplir nuestras políticas y acuerdos legales.</ p>
+            <p>La Team conservará sus Datos personales solo durante el tiempo que sea necesario para los fines establecidos en esta Política de Privacidad. Conservaremos y utilizaremos sus datos personales en la medida necesaria para cumplir con nuestras obligaciones legales (por ejemplo, si estamos obligados a conservar sus datos para cumplir con las leyes aplicables), resolver disputas y hacer cumplir nuestras políticas y acuerdos legales.</ p>
           </div>
           <div class="paragraph">
             <p>La Empresa también conservará los Datos de uso para fines de análisis interno. Los Datos de uso generalmente se retienen por un período de tiempo más corto, excepto cuando estos datos se usan para fortalecer la seguridad o mejorar la funcionalidad de Nuestro Servicio, o cuando estamos legalmente obligados a retener estos datos por períodos de tiempo más largos.</p>
@@ -406,7 +406,7 @@
             <h2>Transferencia de sus datos personales</h2>
           </div>
           <div class="paragraph">
-            <p>Su información, incluidos los Datos personales, se procesa en las oficinas operativas de la Compañía y en cualquier otro lugar donde se encuentren las partes involucradas en el procesamiento. Significa que esta información se puede transferir y mantener en computadoras ubicadas fuera de Su estado, provincia, país u otra jurisdicción gubernamental donde las leyes de protección de datos pueden diferir de las de Su jurisdicción.</p>
+            <p>Su información, incluidos los Datos personales, se procesa en las oficinas operativas de la Team y en cualquier otro lugar donde se encuentren las partes involucradas en el procesamiento. Significa que esta información se puede transferir y mantener en computadoras ubicadas fuera de Su estado, provincia, país u otra jurisdicción gubernamental donde las leyes de protección de datos pueden diferir de las de Su jurisdicción.</p>
           </div>
           <div class="paragraph">
             <p>Su consentimiento a esta Política de Privacidad seguido de Su envío de dicha información representa Su acuerdo con esa transferencia.</p>
@@ -422,7 +422,7 @@
             <h3>Transacciones comerciales</h3>
           </div>
           <div class="paragraph">
-            <p>Si la Compañía está involucrada en una fusión, adquisición o venta de activos, Sus Datos personales pueden transferirse. Le enviaremos un aviso antes de que sus Datos personales se transfieran y queden sujetos a una Política de Privacidad diferente.</p>
+            <p>Si la Team está involucrada en una fusión, adquisición o venta de activos, Sus Datos personales pueden transferirse. Le enviaremos un aviso antes de que sus Datos personales se transfieran y queden sujetos a una Política de Privacidad diferente.</p>
           </div>
   
           <div class="title">
@@ -436,12 +436,12 @@
             <h3>Otros requisitos legales</h3>
           </div>
           <div class="paragraph">
-            <p>La Compañía puede divulgar sus datos personales de buena fe cuando considere que esta acción es necesaria para:</p>
+            <p>La Team puede divulgar sus datos personales de buena fe cuando considere que esta acción es necesaria para:</p>
           </div>
           <div class="lists">
             <ul>
               <li>Cumplir con una obligación legal</li>
-              <li>Proteger y defender los derechos o la propiedad de la Compañía</li>
+              <li>Proteger y defender los derechos o la propiedad de la Team</li>
               <li>Prevenir o investigar posibles irregularidades en relación con el Servicio</li>
               <li>Proteger la seguridad personal de los Usuarios del Servicio o del público</li>
               <li>Proteger contra responsabilidad legal</li>
