--- a/fil-ph/privacy-policy/index.html
+++ b/fil-ph/privacy-policy/index.html
@@ -226,7 +226,7 @@
               <p><strong>Mga Cookie</strong> ay mga small file na pini-place sa computer Mo, mobile device or any other device ng isang website, na nagko-contain ng mga detail ng browsing history Mo sa website na 'yon kasama ng maraming gamit nito.</p>
             </li>
             <li>
-              <p><strong>Bansa</strong> nagre-refer sa: Pilipinas</p>
+              <p><strong>Bansa</strong> nai-refer sa: Pilipinas</p>
             </li>
             <li>
               <p><strong>Device</strong> means kahit anong device na pwedeng ma-access ang Service katulad ng isang computer, isang cellphone o isang digital tablet.</p>
@@ -289,26 +289,26 @@
         </div>
         
         <div class="caption">
-          <h3>Tracking Technologies and Cookies</h3>
+          <h3>Mga Tracking Technology at Mga Cookie</h3>
         </div>
         <div class="paragraph">
-          <p>We use Cookies and similar tracking technologies to track the activity on Our Service and store certain information. Tracking technologies used are beacons, tags, and scripts to collect and track information and to improve and analyze Our Service. The technologies We use may include:</p>
+          <p>Ginagamit Namin ang mga Cookie at katulad na mga tracking technology para ma-track ang activity sa Aming Service at mag-store ng certain information. Ang mga Tracking technology na ginagamit ay mga beacon, mga tag, at mga script para ma-collect at ma-track ang information at para ma-improve at i-analyzw ang Ating Service. Ang mga Technology na ginamit Namin pwedeng may kasamang:</p>
         </div>
         <div class="lists">
           <ul>
             <li>
               <p>
-                <strong>Cookies or Browser Cookies.</strong> A cookie is a small file placed on Your Device. You can instruct Your browser to refuse all Cookies or to indicate when a Cookie is being sent. However, if You do not accept Cookies, You may not be able to use some parts of our Service. Unless you have adjusted Your browser setting so that it will refuse Cookies, our Service may use Cookies.
+                <strong>Mga Cookie o Mga Browser Cookie.</strong> Ang isang cookie ay isang small file na pini-place sa Device Mo. Pwede mong ituro ang browser Mo para ma-refuse ang lahat ng mga Cookie o para i-indicate kapag ang isang Cookie ay ipinapadala. However, 'pag 'di Mo tinatanggap ang mga Cookie, pwedeng hindi mo magagamit ang ilang mga part ng aming Service. Unless kung ina-adjust mo ang browser setting Mo para i-refuse nito ang mga Cookie, pwedeng gamitin ng aming Service ang mga Cookie.
               </p>
             </li>
             <li>
               <p>
-                <strong>Flash Cookies.</strong> Certain features of our Service may use local stored objects (or Flash Cookies) to collect and store information about Your preferences or Your activity on our Service. Flash Cookies are not managed by the same browser settings as those used for Browser Cookies. For more information on how You can delete Flash Cookies, please read "Where can I change the settings for disabling, or deleting local shared objects?" available at <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_</a>
+                <strong>Mga Flash Cookie.</strong> Ang mga certain feature ng aming Service ay pwedeng gumamit ng mga local stored objects (o mga Flash Cookie) para mag-collect at mag-store ng information about sa mga preference Mo o aktibidad Mo sa aming Service. Mga Flash Cookie ay hindi nai-manage ng parehong mga browser setting bilang mga ginagamit para sa mga Browser Cookie. Para sa more information kung paano mo matatanggal ang mga Flash Cookie, please basahin ang "Saan ko mababago ang mga setting para sa pagdi-disable, o pag-delete ng mga local shared objects?" na available sa <a href="https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_" rel="external nofollow noopener" target="_blank">https://helpx.adobe.com/flash-player/kb/disable-local-shared-objects-flash.html#main_Where_can_I_change_the_settings_for_disabling__or_deleting_local_shared_objects_</a>
               </p>
             </li>
             <li>
               <p>
-                <strong>Web Beacons.</strong> Certain sections of our Service and our emails may contain small electronic files known as web beacons (also referred to as clear gifs, pixel tags, and single-pixel gifs) that permit the Company, for example, to count users who have visited those pages or opened an email and for other related website statistics (for example, recording the popularity of a certain section and verifying system and server integrity).
+                <strong>Mga Web Beacon.</strong> Ang mga certain section ng aming Service at ang aming mga email ay maaaring maglaman ng maliliit na electronic file na kilala bilang web beacon (tinukoy din bilang malinaw na mga gif, mga pixel tag, at mga single-pixel gif) na nagpe-permit sa Team, example, sa mga gumagamit na mga visitor sa mga page o na-open ang isang email at para sa iba pang related na mga website statistic (example, pagre-record ng isang certain na section at pag-verify ng system at integrity).
               </p>
             </li>
           </ul>
