half description done

--- a/fil-ph/privacy-policy/index.html
+++ b/fil-ph/privacy-policy/index.html
@@ -314,35 +314,35 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>Cookies can be "Persistent" or "Session" Cookies. Persistent Cookies remain on Your personal computer or mobile device when You go offline, while Session Cookies are deleted as soon as You close Your web browser. Learn more about cookies: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">Use of Cookies by Free Privacy Policy</a>.</p>
+          <p>Ang mga Cookie ay pwedeng mga "Persistent" o "Session" Cookie. Mga Persistent Cookie ay magse-stay sa personal computer Mo o mobile device kapag ikaw ay offline, habang ang mga Session Cookie ay nai-delete sa lalong madaling panahon mo isinara ang web browser Mo. Alamin pa ang about sa mga cookie: <a href="https://www.freeprivacypolicy.com/blog/sample-privacy-policy-template/#Use_Of_Cookies_And_Tracking" target="_blank">Paggamit sa mga Cookie Free Privacy Policy</a>.</p>
         </div>
         <div class="paragraph">
-          <p>We use both Session and Persistent Cookies for the purposes set out below:</p>
+          <p>Parehas Natin ginagamit ang mga Session at Persistent Cookie para sa mga purpose nai-set sa ibaba:</p>
         </div>
         <div class="lists">
           <ul>
             <li>
-              <p><strong>Necessary / Essential Cookies</strong></p>
-              <p>Type: Session Cookies</p>
-              <p>Administered by: Us</p>
-              <p>Purpose: These Cookies are essential to provide You with services available through the Website and to enable You to use some of its features. They help to authenticate users and prevent fraudulent use of user accounts. Without these Cookies, the services that You have asked for cannot be provided, and We only use these Cookies to provide You with those services.</p>
+              <p><strong>Necessary / Essential na mga Cookie</strong></p>
+              <p>Type: Mga Session Cookie</p>
+              <p>Ina-administer ng: Tayo</p>
+              <p>Purpose: Ang mga Cookie na ito ay essential para mag-provide ng mga service na magagamit Mo through the Website at para ma-enable Kang gamitin ang ilan sa kanyang mga feature. Tumutulong sila para ma-authenticate ang mga user at ma-prevent ang mapanlinlang na paggamit ng mga user account. Kung wala ang mga Cookie na ito, ang mga service na ina-ask mo ay hindi mapo-provide, at ginagamit lamang Namin ang mga Cookie na ito para ibigay sa Iyo ang mga serbisyong 'yon.</p>
             </li>
             <li>
-              <p><strong>Cookies Policy / Notice Acceptance Cookies</strong></p>
-              <p>Type: Persistent Cookies</p>
-              <p>Administered by: Us</p>
-              <p>Purpose: These Cookies identify if users have accepted the use of cookies on the Website.</p>
+              <p><strong>Mga Cookie Policy / Notice Acceptance na mga Cookie</strong></p>
+              <p>Type: Mga Persistent Cookie</p>
+              <p>Ina-administer ng: Tayo</p>
+              <p>Purpose: Ina-identify ng mga Cookie na'to kung tinanggap ng mga user ang paggamit ng mga cookie sa Website.</p>
             </li>
             <li>
-              <p><strong>Functionality Cookies</strong></p>
-              <p>Type: Persistent Cookies</p>
-              <p>Administered by: Us</p>
-              <p>Purpose: These Cookies allow us to remember choices You make when You use the Website, such as remembering your login details or language preference. The purpose of these Cookies is to provide You with a more personal experience and to avoid You having to re-enter your preferences every time You use the Website.</p>
+              <p><strong>Mga Functionality Cookie</strong></p>
+              <p>Type: Mga Persistent Cookie</p>
+              <p>Ina-administer ng: Tayo</p>
+              <p>Purpose: Ang mga Cookie na ito ay nag-a-allow sa atin upang maalala ang mga pagpipilian na ginagawa Mo kapag ginagamit Mo ang Website, tulad ng pag-alaala sa mga detalye o kagustuhan mo sa wika. Ang purpose ng mga Cookie na ito ay para magbigay sa Iyo ng isang mas personal na karanasan at para ma-avoid ang pagkakaroon Mong ipasok ulit ng iyong mga preference kada gagamitin Mo ang Website.</p>
             </li>
           </ul>
         </div>
         <div class="paragraph">
-          <p>For more information about the cookies we use and your choices regarding cookies, please visit our Cookies Policy or the Cookies section of our Privacy Policy.</p>
+          <p>Para sa more information about sa mga cookie na ginagamit namin at ang iyong mga pagpipilian about sa mga cookie, please i-visit ang aming Mga Cookie Patakaran o ang Mga Cookie section ng aming Privacy Policy.</p>
         </div>
 
         <div class="title">
