--- a/fil-ph/privacy-policy/index.html
+++ b/fil-ph/privacy-policy/index.html
@@ -346,33 +346,33 @@
         </div>
 
         <div class="title">
-          <h2>Use of Your Personal Data</h2>
+          <h2>Paggamit sa Personal Data mo</h2>
         </div>
         <div class="paragraph">
-          <p>The Company may use Personal Data for the following purposes:</p>
+          <p>Pwedeng gumamit ang Team ng Personal Data para sa mga following purpose:</p>
         </div>
         <div class="lists">
           <ul>
             <li>
-              <p><strong>To provide and maintain our Service</strong>, including to monitor the usage of our Service.</p>
+              <p><strong>Para i-provide at ma-maintain ang aming Service</strong>, kasama ang pag-monitor sa paggamit ng Service namin.</p>
             </li>
             <li>
-              <p><strong>To manage Your Account:</strong> to manage Your registration as a user of the Service. The Personal Data You provide can give You access to different functionalities of the Service that are available to You as a registered user.</p>
+              <p><strong>Para i-manage ang Account Mo:</strong> para i-manage ang pagpapa-register Mo bilang isang user ng Service. Ang Personal Data na pino-provide Mo ay pwedeng magbigay ng access sa Iyo sa iba't ibang mga functionality ng Service na magagamit sa Iyo bilang isang registered user.</p>
             </li>
             <li>
-              <p><strong>For the performance of a contract:</strong> the development, compliance and undertaking of the purchase contract for the products, items or services You have purchased or of any other contract with Us through the Service.</p>
+              <p><strong>Para sa performance ng isang contract:</strong> ang development, pagsunod at pag-a-undertake ng contract sa pagbili para sa mga product, mga item o mga service na binili Mo o ng anumang iba pang contract sa Amin through the Service.</p>
             </li>
             <li>
-              <p><strong>To contact You:</strong> To contact You by email, telephone calls, SMS, or other equivalent forms of electronic communication, such as a mobile application's push notifications regarding updates or informative communications related to the functionalities, products or contracted services, including the security updates, when necessary or reasonable for their implementation.</p>
+              <p><strong>Para ma-contact Ikaw:</strong> Para ma-contact Kita sa email, mga telephone call, SMS, o iba pang mga equivalent form ng electronic communication, gaya ng mga push notification ng mobile application about sa mga update o mga informaive communication na naire-relate sa mga functionality, mga produkto o mga na-contract na service, kasama ang mga security update, 'pag necessary o reasonable para sa implementation nila.</p>
             </li>
             <li>
-              <p><strong>To provide You</strong> with news, special offers and general information about other goods, services and events which we offer that are similar to those that you have already purchased or enquired about unless You have opted not to receive such information.</p>
+              <p><strong>Para ma-provide Kita</strong> ng mga news, mga special offer at general information about sa iba pang mga good, mga service at mga event na ino-offer namin na katulad ng mga nabili mo na o na-enquire about unless kung pinili Mong hindi tumanggap ng information.</p>
             </li>
             <li>
-              <p><strong>To manage Your requests:</strong> To attend and manage Your requests to Us.</p>
+              <p><strong>Para ma-manage ang mga request Mo:</strong> Para um-attend at i-manage ang mga request Mo sa Amin.</p>
             </li>
             <li>
-              <p><strong>For business transfers:</strong> We may use Your information to evaluate or conduct a merger, divestiture, restructuring, reorganization, dissolution, or other sale or transfer of some or all of Our assets, whether as a going concern or as part of bankruptcy, liquidation, or similar proceeding, in which Personal Data held by Us about our Service users is among the assets transferred.</p>
+              <p><strong>Para sa mga business transfers:</strong> Pwede naming gamitin ang information Mp para i-evaluate o mag-conduct ng isang merger, divestiture, restructuring, reorganization, dissolution, o iba pang pagse-sale o pagta-transfer ng ilan o lahat ng mga asset Namin, whether bilang maging concern o bilang part of bankruptcy, liquidation, o paehas na pagpo-process, na kung saan ang Personal Data na hawak Namin about sa aming Service mga user ay kasama sa mga asset na nai-transfer na.</p>
             </li>
             <li>
               <p><strong>For other purposes</strong>: We may use Your information for other purposes, such as data analysis, identifying usage trends, determining the effectiveness of our promotional campaigns and to evaluate and improve our Service, products, services, marketing and your experience.</p>
@@ -380,87 +380,87 @@
           </ul>
         </div>
         <div class="paragraph">
-          <p>We may share Your personal information in the following situations:</p>
+          <p>Pwede Naming i-share ang personal information Mo sa mga following situation:</p>
         </div>
         <div class="lists">
           <ul>
-            <li><strong>With Service Providers:</strong> We may share Your personal information with Service Providers to monitor and analyze the use of our Service,  to contact You.</li>
-            <li><strong>For business transfers:</strong> We may share or transfer Your personal information in connection with, or during negotiations of, any merger, sale of Company assets, financing, or acquisition of all or a portion of Our business to another company.</li>
-            <li><strong>With Affiliates:</strong> We may share Your information with Our affiliates, in which case we will require those affiliates to honor this Privacy Policy. Affiliates include Our parent company and any other subsidiaries, joint venture partners or other companies that We control or that are under common control with Us.</li>
-            <li><strong>With business partners:</strong> We may share Your information with Our business partners to offer You certain products, services or promotions.</li>
-            <li><strong>With other users:</strong> when You share personal information or otherwise interact in the public areas with other users, such information may be viewed by all users and may be publicly distributed outside.</li>
-            <li><strong>With Your consent</strong>: We may disclose Your personal information for any other purpose with Your consent.</li>
+            <li><strong>Kasama'ng mga Service Provider:</strong> Pwede naming i-share ang personal information mo sa mga Service Provider upang i-monitor at i-analyze ang paggamit ng aming Service, para ma-contact Ka namin.</li>
+            <li><strong>Para sa mga business transfer:</strong> Pwede naming i-share o ilipat ang personal information Mo na may connection sa, o sa panahon ng mga pag-negotiation ng, anumang merger, pagse-sale ng mga asset ng Team, pagpopondo, o pagkuha ng lahat o bahagi ng business Namin sa ibang team/ studios.</li>
+            <li><strong>Kasama'ng mga Affiliate:</strong> Pwede naming i-share o ilipat ang personal information Mo sa mga ka-affiliate Namin, kung saan ire-require namin sa mga ka-affiliate na iyon na igalang ang Privacy Policy na'to. Kasama sa mga ka-affiliate ang parent team/ studios Namin at iba pang mga subsidiary, mga ka-partner sa joint venture o iba pang team/ studios na kino-control Namin o nasa ilalim ng common control sa Amin.</li>
+            <li><strong>Kasama'ng mga business partner:</strong> Pwede naming i-share o ilipat ang personal information Mo sa mga ka-partner Namin sa business para mag-offer ng mga ilang certain product sa Iyo, mga service o mga promotion.</li>
+            <li><strong>Kasama'ng mga ibang user:</strong> kapag nag-share Ka ng personal information o kung hindi man ay nakipag-interact ka sa mga public area sa ibang mga user, ang naturang information ay pwedeng tingnan ng lahat ng mga user at maaaring ipa-distribute sa public sa labas.</li>
+            <li><strong>Kasama'ng consent Mo</strong>: Pwede naming i-disclose ang personal information Mo para sa iba pang purpose nang may consent Mo.</li>
           </ul>
         </div>
 
         <div class="subtitle">
-          <h2>Retention of Your Personal Data</h2>
+          <h2>Pagre-retain ng Personal Data Mo</h2>
         </div>
         <div class="paragraph">
-          <p>The Company will retain Your Personal Data only for as long as is necessary for the purposes set out in this Privacy Policy. We will retain and use Your Personal Data to the extent necessary to comply with our legal obligations (for example, if we are required to retain your data to comply with applicable laws), resolve disputes, and enforce our legal agreements and policies.</p>
+          <p>Ire-retain lang ng Team ang Personal Data Mo hangga't kinakailangan para sa mga purpose na ini-set sa Privacy Policy na'to. Ire-retain at gagamitin namin ang Personal Data Mo sa lawak na kinakailangan para i-comply sa aming mga legal na obligation (example, kung nire-require naming i-retain ang data mo para sumunod sa naa-apply na mga batas), i-resolve ang mga hindi pagkakaunawaan, at i-enforce ang aming mga legal agreements at mga policy.</p>
         </div>
         <div class="paragraph">
-          <p>The Company will also retain Usage Data for internal analysis purposes. Usage Data is generally retained for a shorter period of time, except when this data is used to strengthen the security or to improve the functionality of Our Service, or We are legally obligated to retain this data for longer time periods.</p>
+          <p>Ire-retain din ng Team ang Usage Data para sa mga purpose ng internal analysis. Ang Usage Data ay karaniwang nire-retain para sa isang mas maikling period, excpet kung ang data na'to ay ginagamit para palakasin ang security o para ma-improve ang pag-function ng Service Namin, o Kami'y legally obligated na i-retain ang data na'to para sa mas mahabang mga period.</p>
         </div>
 
         <div class="subtitle">
-          <h2>Transfer of Your Personal Data</h2>
+          <h2>Pag-transfer Personal Data Mo</h2>
         </div>
         <div class="paragraph">
-          <p>Your information, including Personal Data, is processed at the Company's operating offices and in any other places where the parties involved in the processing are located. It means that this information may be transferred to — and maintained on — computers located outside of Your state, province, country or other governmental jurisdiction where the data protection laws may differ than those from Your jurisdiction.</p>
+          <p>Ang information mo, kasama'ng Personal Data, ay pino-process sa mga operating office ng Team at sa iba pang mga place kung saan makikita ang mga party ay involve sa pag-process. Meaning ay 'to na ang information na ito ay pwedeng i-transfer sa — at ma-maintain sa — mga computer na malo-locate sa labas ng estado Mo, probinsya, bansa o iba pang governmental jurisdiction kung saan pwedeng iba ang mga batas sa protection ng data kaysa sa mga nasa jurisdiction Mo.</p>
         </div>
         <div class="paragraph">
-          <p>Your consent to this Privacy Policy followed by Your submission of such information represents Your agreement to that transfer.</p>
+          <p>Ang pahintulot mo sa Privacy Policy na'to na fina-follow ng pagsu-submit mo ng naturang information ay nagre-represent sa kasunduan Mo sa pag-transfer na 'yon.</p>
         </div>
         <div class="paragraph">
-          <p>The Company will take all steps reasonably necessary to ensure that Your data is treated securely and in accordance with this Privacy Policy and no transfer of Your Personal Data will take place to an organization or a country unless there are adequate controls in place including the security of Your data and other personal information.</p>
+          <p>Gagawin ng Team ang lahat ng mga reasonably step na kinakailangan para ma-ensure na ang data Mo ay ginagamot nang secure at in accordance sa Privacy Policy na'to at walang pagta-transfer ng Personal Data Mo na magaganap sa isang organization o isang bansa unless kung may saktong mga control sa lugar including na ang security ng ang data Mo at iba pang personal information.</p>
         </div>
 
         <div class="subtitle">
-          <h2>Disclosure of Your Personal Data</h2>
+          <h2>Pagd-Disclose Personal Data Mo</h2>
         </div>
         <div class="caption">
-          <h3>Business Transactions</h3>
+          <h3>Mga Business Transaction</h3>
         </div>
         <div class="paragraph">
-          <p>If the Company is involved in a merger, acquisition or asset sale, Your Personal Data may be transferred. We will provide notice before Your Personal Data is transferred and becomes subject to a different Privacy Policy.</p>
+          <p>Kapag ang Team ay na-involve sa isang merger, acquisition o pagse-sale ng asset, ang Personal Data Mo ay pwedeng i-transfer. Magpo-provide Kami ng notice bago ma-transfer ang Personal Data Mo at mapailalim sa ibang Privacy Policy.</p>
         </div>
 
         <div class="caption">
           <h3>Law enforcement</h3>
         </div>
         <div class="paragraph">
-          <p>Under certain circumstances, the Company may be required to disclose Your Personal Data if required to do so by law or in response to valid requests by public authorities (e.g. a court or a government agency).</p>
+          <p>Sa ilalim ng ilang mga certain circumstance, pwedeng i-require ng Team na i-disclose ang Personal Data Mo kung nire-require na gawin 'to ng law o bilang response sa mga valid request ng mga public authorities (ex. isang court o agency ng government).</p>
         </div>
 
         <div class="caption">
-          <h3>Other legal requirements</h3>
+          <h3>Iba pang mga legal requirement</h3>
         </div>
         <div class="paragraph">
-          <p>The Company may disclose Your Personal Data in the good faith belief that such action is necessary to:</p>
+          <p>pwedeng i-disclose ng Team ang Personal Data Mo sa mabuting faith na ang naturang action ay necessary para:</p>
         </div>
         <div class="lists">
           <ul>
-            <li>Comply with a legal obligation</li>
-            <li>Protect and defend the rights or property of the Company</li>
-            <li>Prevent or investigate possible wrongdoing in connection with the Service</li>
-            <li>Protect the personal safety of Users of the Service or the public</li>
-            <li>Protect against legal liability</li>
+            <li>Mag-comply kasama sa isang legal obligation</li>
+            <li>I-protect at i-defend ang mga right o property ng Team</li>
+            <li>I-prevent o i-investigate ang possible na maling gawain ka-connection ng Service</li>
+            <li>I-protect ang personal safety ng mga User ng Service o ng public</li>
+            <li>I-protect laban sa legal liability</li>
           </ul>
         </div>
         
         <div class="subtitle">
-          <h2>Security of Your Personal Data</h2>
+          <h2>Security ng Personal Data Mo</h2>
         </div>
         <div class="paragraph">
-          <p>The security of Your Personal Data is important to Us, but remember that no method of transmission over the Internet, or method of electronic storage is 100% secure. While We strive to use commercially acceptable means to protect Your Personal Data, We cannot guarantee its absolute security.</p>
+          <p>Ang security ng Personal Data Mo ay important sa Amin, pero tandaan na walang method ng pagta-transmit sa Internet, o method ng electronic storage na 100% secure. Habang nagsa-strive Kami na gumamit ng mga paraan na tinatanggap sa commercial upang i-protect ang Personal Data Mo, hindi namin maga-guarantee ang ganap na security nito.</p>
         </div>
 
         <div class="title">
-          <h1>Children's Privacy</h1>
+          <h1>Privacy ng mga Bata</h1>
         </div>
         <div class="paragraph">
-          <p>Our Service does not address anyone under the age of 13. We do not knowingly collect personally identifiable information from anyone under the age of 13. If You are a parent or guardian and You are aware that Your child has provided Us with Personal Data, please contact Us. If We become aware that We have collected Personal Data from anyone under the age of 13 without verification of parental consent, We take steps to remove that information from Our servers.</p>
+          <p>Ang aming Service ay hindi uma-address anyone sa ilalim ng age na 13. Hindi namin sinasadyang nagk-collect ng personal na identifiable information galing sa sinumang wala pang 13 years old. Kung Ikaw ay magulang ka o guardian at alam Mo na ang anak Mo ay nagbigay sa Amin ng Personal Data, please i-contact sa amin. Kung malalaman Namin na Kami ay nagko-collect ng Personal na Data mula sa sinumang wala pang 13 taong gulang nang walang pag-verify ng pahintulot ng magulang, gagawa Kami ng mga hakbang upang alisin ang impormasyong iyon mula sa Aming mga server.</p>
         </div>
         <div class="paragraph">
           <p>If We need to rely on consent as a legal basis for processing Your information and Your country requires consent from a parent, We may require Your parent's consent before We collect and use that information.</p>
